--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -37,7 +37,7 @@
     <header id="branding">
       <div class="grid_3">
         <hgroup>
-          <h1 id="site_logo" ><a href="/" title=""><img src="<%= asset_path("images/logo.png")%>" alt="Online Store Theme Logo"/></a></h1>
+          <h1 id="site_logo" ><a href="/" title=""><img src="<%= asset_path("logo.png")%>" alt="Online Store Theme Logo"/></a></h1>
           <h2 id="site_description">Online Store Theme</h2>
         </hgroup>
       </div><!-- .grid_3 -->
