--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -7,7 +7,7 @@
               
         <div id="slider">
          <div class="slide">
-            <img src="<%= asset_path("images/content/slide1.jpg")%>" alt="" title="" />
+            <img src="<%= asset_path('content/slide1.jpg')%>" alt="" title="" />
             <div class="slid_text">
               <h3 class="slid_title"><span>Breeze Theme</span></h3>
               <p><span>Breeze is the 14 stylish HTML templates,</span></p>
@@ -17,7 +17,7 @@
           </div>
 
          <div class="slide">
-            <img src="<%= asset_path("images/content/slide2.jpg")%>" alt="" title="" />
+            <img src="<%= asset_path('content/slide2.jpg')%>" alt="" title="" />
             <div class="slid_text">
               <h3 class="slid_title"><span>Flexibility</span></h3>
               <p><span>Every product, which you are selling,</span></p>
@@ -26,7 +26,7 @@
           </div>
 
           <div class="slide">
-            <img src="<%= asset_path("images/content/slide3.jpg")%>" alt="" title="" />
+            <img src="<%= asset_path('content/slide3.jpg')%>" alt="" title="" />
             <div class="slid_text">
               <h3 class="slid_title"><span>Accuracy and Easiness</span></h3>
               <p><span>Breeze design is mere and accurate,</span></p>
@@ -52,19 +52,19 @@
       <div id="top_button">
         <div class="grid_4">
           <a href="#" class="button_block best_price">
-            <img src="<%= asset_path("images/banner1.png")%>" alt="Banner 1"/>
+            <img src="<%= asset_path('banner1.png')%>" alt="Banner 1"/>
           </a><!-- .best_price -->
         </div><!-- .grid_4 -->
 
         <div class="grid_4">
           <a href="#" class="button_block new_smells">
-            <img src="<%= asset_path("images/banner2.png")%>" alt="Banner 2"/>
+            <img src="<%= asset_path('banner2.png')%>" alt="Banner 2"/>
           </a><!-- .new smells -->
         </div><!-- .grid_4 -->
 
         <div class="grid_4">
           <a href="#" class="button_block only_natural">
-            <img src="<%= asset_path("images/banner3.png")%>" alt="Banner 3"/>
+            <img src="<%= asset_path('banner3.png')%>" alt="Banner 3"/>
           </a><!-- .only_natural -->
         </div><!-- .grid_4 -->
 
@@ -90,9 +90,9 @@
         <ul id="list_product" class="list_product">
           <li class="">
             <div class="grid_3 product">
-              <img class="sale" src="<%= asset_path("images/sale.png")%>" alt="Sale"/>
+              <img class="sale" src="<%= asset_path('sale.png')%>" alt="Sale"/>
               <div class="prev">
-                <a href="/product_page.html"><img src="<%= asset_path("images/product_1.png")%>" alt="" title="" /></a>
+                <a href="/product_page.html"><img src="<%= asset_path("product_1.png")%>" alt="" title="" /></a>
               </div><!-- .prev -->
               <h3 class="title">Febreze Air Effects New Zealand Springs</h3>
               <div class="cart">
@@ -111,49 +111,9 @@
 
           <li class="">
             <div class="grid_3 product">
-              <img class="sale" src="<%= asset_path("images/sale.png")%>" alt="Sale"/>
+              <img class="sale" src="<%= asset_path("sale.png")%>" alt="Sale"/>
               <div class="prev">
-                <a href="/product_page.html"><img src="<%= asset_path("images/product_2.png")%>" alt="" title="" /></a>
-              </div><!-- .prev -->
-              <h3 class="title">Febreze Air Effects New Zealand Springs</h3>
-              <div class="cart">
-                <div class="price">
-                <div class="vert">
-                  <div class="price_new">$550.00</div>
-                  <div class="price_old">$725.00</div>
-                </div>
-                </div>
-                <a href="#" class="obn"></a>
-                <a href="#" class="like"></a>
-                <a href="#" class="bay"></a>
-              </div><!-- .cart -->
-            </div><!-- .grid_3 -->
-          </li>
-
-          <li class="">
-            <div class="grid_3 product">
-              <div class="prev">
-                <a href="/product_page.html"><img src="<%= asset_path("images/product_3.png")%>" alt="" title="" /></a>
-              </div><!-- .prev -->
-              <h3 class="title">Febreze Air Effects New Zealand Springs</h3>
-              <div class="cart">
-                <div class="price">
-                <div class="vert">
-                  <div class="price_new">$550.00</div>
-                </div>
-                </div>
-                <a href="#" class="obn"></a>
-                <a href="#" class="like"></a>
-                <a href="#" class="bay"></a>
-              </div><!-- .cart -->
-            </div><!-- .grid_3 -->
-          </li>
-
-          <li class="">
-            <div class="grid_3 product">
-              <img class="sale" src="<%= asset_path("images/sale.png")%>" alt="Sale"/>
-              <div class="prev">
-                <a href="/product_page.html"><img src="<%= asset_path("images/product_4.png")%>" alt="" title="" /></a>
+                <a href="/product_page.html"><img src="<%= asset_path("product_2.png")%>" alt="" title="" /></a>
               </div><!-- .prev -->
               <h3 class="title">Febreze Air Effects New Zealand Springs</h3>
               <div class="cart">
@@ -173,7 +133,47 @@
           <li class="">
             <div class="grid_3 product">
               <div class="prev">
-                <a href="/product_page.html"><img src="<%= asset_path("images/product_8.png")%>" alt="" title="" /></a>
+                <a href="/product_page.html"><img src="<%= asset_path("product_3.png")%>" alt="" title="" /></a>
+              </div><!-- .prev -->
+              <h3 class="title">Febreze Air Effects New Zealand Springs</h3>
+              <div class="cart">
+                <div class="price">
+                <div class="vert">
+                  <div class="price_new">$550.00</div>
+                </div>
+                </div>
+                <a href="#" class="obn"></a>
+                <a href="#" class="like"></a>
+                <a href="#" class="bay"></a>
+              </div><!-- .cart -->
+            </div><!-- .grid_3 -->
+          </li>
+
+          <li class="">
+            <div class="grid_3 product">
+              <img class="sale" src="<%= asset_path("sale.png")%>" alt="Sale"/>
+              <div class="prev">
+                <a href="/product_page.html"><img src="<%= asset_path("product_4.png")%>" alt="" title="" /></a>
+              </div><!-- .prev -->
+              <h3 class="title">Febreze Air Effects New Zealand Springs</h3>
+              <div class="cart">
+                <div class="price">
+                <div class="vert">
+                  <div class="price_new">$550.00</div>
+                  <div class="price_old">$725.00</div>
+                </div>
+                </div>
+                <a href="#" class="obn"></a>
+                <a href="#" class="like"></a>
+                <a href="#" class="bay"></a>
+              </div><!-- .cart -->
+            </div><!-- .grid_3 -->
+          </li>
+
+          <li class="">
+            <div class="grid_3 product">
+              <div class="prev">
+                <a href="/product_page.html"><img src="<%= asset_path("product_8.png")%>" alt="" title="" /></a>
               </div><!-- .prev -->
               <h3 class="title">Febreze Air Effects New Zealand Springs</h3>
               <div class="cart">
@@ -212,7 +212,7 @@
             <div class="grid_3 product">
               
               <div class="prev">
-                <a href="/product_page.html"><img src="<%= asset_path("images/product_5.png")%>" alt="" title="" /></a>
+                <a href="/product_page.html"><img src="<%= asset_path("product_5.png")%>" alt="" title="" /></a>
               </div><!-- .prev -->
               <h3 class="title">Febreze Air Effects New Zealand Springs</h3>
               <div class="cart">
@@ -231,49 +231,9 @@
 
           <li class="">
             <div class="grid_3 product">
-              <img class="sale" src="<%= asset_path("images/sale.png")%>" alt="Sale"/>
+              <img class="sale" src="<%= asset_path("sale.png")%>" alt="Sale"/>
               <div class="prev">
-                <a href="/product_page.html"><img src="<%= asset_path("images/product_6.png")%>" alt="" title="" /></a>
-              </div><!-- .prev -->
-              <h3 class="title">Febreze Air Effects New Zealand Springs</h3>
-              <div class="cart">
-                <div class="price">
-                <div class="vert">
-                  <div class="price_new">$550.00</div>
-                  <div class="price_old">$725.00</div>
-                </div>
-                </div>
-                <a href="#" class="obn"></a>
-                <a href="#" class="like"></a>
-                <a href="#" class="bay"></a>
-              </div><!-- .cart -->
-            </div><!-- .grid_3 -->
-          </li>
-
-          <li class="">
-            <div class="grid_3 product">
-              <div class="prev">
-                <a href="/product_page.html"><img src="<%= asset_path("images/product_7.png")%>" alt="" title="" /></a>
-              </div><!-- .prev -->
-              <h3 class="title">Febreze Air Effects New Zealand Springs</h3>
-              <div class="cart">
-                <div class="price">
-                <div class="vert">
-                  <div class="price_new">$550.00</div>
-                </div>
-                </div>
-                <a href="#" class="obn"></a>
-                <a href="#" class="like"></a>
-                <a href="#" class="bay"></a>
-              </div><!-- .cart -->
-            </div><!-- .grid_3 -->
-          </li>
-
-          <li class="">
-            <div class="grid_3 product">
-              <img class="sale" src="<%= asset_path("images/sale.png")%>" alt="Sale"/>
-              <div class="prev">
-                <a href="/product_page.html"><img src="<%= asset_path("images/produkt_slid1.png")%>" alt="" title="" /></a>
+                <a href="/product_page.html"><img src="<%= asset_path("product_6.png")%>" alt="" title="" /></a>
               </div><!-- .prev -->
               <h3 class="title">Febreze Air Effects New Zealand Springs</h3>
               <div class="cart">
@@ -293,7 +253,47 @@
           <li class="">
             <div class="grid_3 product">
               <div class="prev">
-                <a href="/product_page.html"><img src="<%= asset_path("images/product_9.png")%>" alt="" title="" /></a>
+                <a href="/product_page.html"><img src="<%= asset_path("product_7.png")%>" alt="" title="" /></a>
+              </div><!-- .prev -->
+              <h3 class="title">Febreze Air Effects New Zealand Springs</h3>
+              <div class="cart">
+                <div class="price">
+                <div class="vert">
+                  <div class="price_new">$550.00</div>
+                </div>
+                </div>
+                <a href="#" class="obn"></a>
+                <a href="#" class="like"></a>
+                <a href="#" class="bay"></a>
+              </div><!-- .cart -->
+            </div><!-- .grid_3 -->
+          </li>
+
+          <li class="">
+            <div class="grid_3 product">
+              <img class="sale" src="<%= asset_path("sale.png")%>" alt="Sale"/>
+              <div class="prev">
+                <a href="/product_page.html"><img src="<%= asset_path("produkt_slid1.png")%>" alt="" title="" /></a>
+              </div><!-- .prev -->
+              <h3 class="title">Febreze Air Effects New Zealand Springs</h3>
+              <div class="cart">
+                <div class="price">
+                <div class="vert">
+                  <div class="price_new">$550.00</div>
+                  <div class="price_old">$725.00</div>
+                </div>
+                </div>
+                <a href="#" class="obn"></a>
+                <a href="#" class="like"></a>
+                <a href="#" class="bay"></a>
+              </div><!-- .cart -->
+            </div><!-- .grid_3 -->
+          </li>
+
+          <li class="">
+            <div class="grid_3 product">
+              <div class="prev">
+                <a href="/product_page.html"><img src="<%= asset_path("product_9.png")%>" alt="" title="" /></a>
               </div><!-- .prev -->
               <h3 class="title">Febreze Air Effects New Zealand Springs</h3>
               <div class="cart">
