fix issue of css

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -7,7 +7,7 @@
               
         <div id="slider">
          <div class="slide">
-            <img src="<%= asset_path('/content/slide1.jpg')%>" alt="" title="" />
+            <img src="<%= asset_path('content/slide1.jpg')%>" alt="" title="" />
             <div class="slid_text">
               <h3 class="slid_title"><span>Breeze Theme</span></h3>
               <p><span>Breeze is the 14 stylish HTML templates,</span></p>
@@ -17,7 +17,7 @@
           </div>
 
          <div class="slide">
-            <img src="<%= asset_path('/content/slide2.jpg')%>" alt="" title="" />
+            <img src="<%= asset_path('content/slide2.jpg')%>" alt="" title="" />
             <div class="slid_text">
               <h3 class="slid_title"><span>Flexibility</span></h3>
               <p><span>Every product, which you are selling,</span></p>
@@ -26,7 +26,7 @@
           </div>
 
           <div class="slide">
-            <img src="<%= asset_path('/content/slide3.jpg')%>" alt="" title="" />
+            <img src="<%= asset_path('content/slide3.jpg')%>" alt="" title="" />
             <div class="slid_text">
               <h3 class="slid_title"><span>Accuracy and Easiness</span></h3>
               <p><span>Breeze design is mere and accurate,</span></p>
