fix issue of css

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -55,7 +55,7 @@
             <ul class="cart_cont">
               <li class="no_border"><p>Recently added item(s)</p></li>
               <li>
-                <a href="/product_page.html" class="prev_cart"><div class="cart_vert"><img src="<%= asset_path("images/cart_img.png")%>" alt="" title="" /></div></a>
+                <a href="/product_page.html" class="prev_cart"><div class="cart_vert"><img src="<%= asset_path("cart_img.png")%>" alt="" title="" /></div></a>
                 <div class="cont_cart">
                   <h4>Caldrea Linen and Room Spray</h4>
                   <div class="price">1 x $399.00</div>
