fix issue of css

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -37,7 +37,7 @@
     <header id="branding">
       <div class="grid_3">
         <hgroup>
-          <h1 id="site_logo" ><a href="/" title=""><img src="<%= asset_path("logo.png")%>" alt="Online Store Theme Logo"/></a></h1>
+          <h1 id="site_logo" ><a href="/" title=""><img src="<%= asset_path('logo.png')%>" alt="Online Store Theme Logo"/></a></h1>
           <h2 id="site_description">Online Store Theme</h2>
         </hgroup>
       </div><!-- .grid_3 -->
@@ -55,7 +55,7 @@
             <ul class="cart_cont">
               <li class="no_border"><p>Recently added item(s)</p></li>
               <li>
-                <a href="/product_page.html" class="prev_cart"><div class="cart_vert"><img src="<%= asset_path("cart_img.png")%>" alt="" title="" /></div></a>
+                <a href="/product_page.html" class="prev_cart"><div class="cart_vert"><img src="<%= asset_path('cart_img.png')%>" alt="" title="" /></div></a>
                 <div class="cont_cart">
                   <h4>Caldrea Linen and Room Spray</h4>
                   <div class="price">1 x $399.00</div>
@@ -65,7 +65,7 @@
               </li>
               
               <li>
-                <a href="/product_page.html" class="prev_cart"><div class="cart_vert"><img src="<%= asset_path("images/produkt_slid1.png")%>" alt="" title="" /></div></a>
+                <a href="/product_page.html" class="prev_cart"><div class="cart_vert"><img src="<%= asset_path('produkt_slid1.png')%>" alt="" title="" /></div></a>
                 <div class="cont_cart">
                   <h4>Caldrea Linen and Room Spray</h4>
                   <div class="price">1 x $399.00</div>
