--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -92,7 +92,7 @@
             <div class="grid_3 product">
               <img class="sale" src="<%= asset_path('sale.png')%>" alt="Sale"/>
               <div class="prev">
-                <a href="/product_page.html"><img src="<%= asset_path("product_1.png")%>" alt="" title="" /></a>
+                <a href="/product_page.html"><img src="<%= asset_path('product_1.png')%>" alt="" title="" /></a>
               </div><!-- .prev -->
               <h3 class="title">Febreze Air Effects New Zealand Springs</h3>
               <div class="cart">
@@ -111,49 +111,9 @@
 
           <li class="">
             <div class="grid_3 product">
-              <img class="sale" src="<%= asset_path("sale.png")%>" alt="Sale"/>
+              <img class="sale" src="<%= asset_path('sale.png')%>" alt="Sale"/>
               <div class="prev">
-                <a href="/product_page.html"><img src="<%= asset_path("product_2.png")%>" alt="" title="" /></a>
-              </div><!-- .prev -->
-              <h3 class="title">Febreze Air Effects New Zealand Springs</h3>
-              <div class="cart">
-                <div class="price">
-                <div class="vert">
-                  <div class="price_new">$550.00</div>
-                  <div class="price_old">$725.00</div>
-                </div>
-                </div>
-                <a href="#" class="obn"></a>
-                <a href="#" class="like"></a>
-                <a href="#" class="bay"></a>
-              </div><!-- .cart -->
-            </div><!-- .grid_3 -->
-          </li>
-
-          <li class="">
-            <div class="grid_3 product">
-              <div class="prev">
-                <a href="/product_page.html"><img src="<%= asset_path("product_3.png")%>" alt="" title="" /></a>
-              </div><!-- .prev -->
-              <h3 class="title">Febreze Air Effects New Zealand Springs</h3>
-              <div class="cart">
-                <div class="price">
-                <div class="vert">
-                  <div class="price_new">$550.00</div>
-                </div>
-                </div>
-                <a href="#" class="obn"></a>
-                <a href="#" class="like"></a>
-                <a href="#" class="bay"></a>
-              </div><!-- .cart -->
-            </div><!-- .grid_3 -->
-          </li>
-
-          <li class="">
-            <div class="grid_3 product">
-              <img class="sale" src="<%= asset_path("sale.png")%>" alt="Sale"/>
-              <div class="prev">
-                <a href="/product_page.html"><img src="<%= asset_path("product_4.png")%>" alt="" title="" /></a>
+                <a href="/product_page.html"><img src="<%= asset_path('product_2.png')%>" alt="" title="" /></a>
               </div><!-- .prev -->
               <h3 class="title">Febreze Air Effects New Zealand Springs</h3>
               <div class="cart">
@@ -173,7 +133,47 @@
           <li class="">
             <div class="grid_3 product">
               <div class="prev">
-                <a href="/product_page.html"><img src="<%= asset_path("product_8.png")%>" alt="" title="" /></a>
+                <a href="/product_page.html"><img src="<%= asset_path('product_3.png')%>" alt="" title="" /></a>
+              </div><!-- .prev -->
+              <h3 class="title">Febreze Air Effects New Zealand Springs</h3>
+              <div class="cart">
+                <div class="price">
+                <div class="vert">
+                  <div class="price_new">$550.00</div>
+                </div>
+                </div>
+                <a href="#" class="obn"></a>
+                <a href="#" class="like"></a>
+                <a href="#" class="bay"></a>
+              </div><!-- .cart -->
+            </div><!-- .grid_3 -->
+          </li>
+
+          <li class="">
+            <div class="grid_3 product">
+              <img class="sale" src="<%= asset_path('sale.png')%>" alt="Sale"/>
+              <div class="prev">
+                <a href="/product_page.html"><img src="<%= asset_path('product_4.png')%>" alt="" title="" /></a>
+              </div><!-- .prev -->
+              <h3 class="title">Febreze Air Effects New Zealand Springs</h3>
+              <div class="cart">
+                <div class="price">
+                <div class="vert">
+                  <div class="price_new">$550.00</div>
+                  <div class="price_old">$725.00</div>
+                </div>
+                </div>
+                <a href="#" class="obn"></a>
+                <a href="#" class="like"></a>
+                <a href="#" class="bay"></a>
+              </div><!-- .cart -->
+            </div><!-- .grid_3 -->
+          </li>
+
+          <li class="">
+            <div class="grid_3 product">
+              <div class="prev">
+                <a href="/product_page.html"><img src="<%= asset_path('product_8.png')%>" alt="" title="" /></a>
               </div><!-- .prev -->
               <h3 class="title">Febreze Air Effects New Zealand Springs</h3>
               <div class="cart">
@@ -212,7 +212,7 @@
             <div class="grid_3 product">
               
               <div class="prev">
-                <a href="/product_page.html"><img src="<%= asset_path("product_5.png")%>" alt="" title="" /></a>
+                <a href="/product_page.html"><img src="<%= asset_path('product_5.png')%>" alt="" title="" /></a>
               </div><!-- .prev -->
               <h3 class="title">Febreze Air Effects New Zealand Springs</h3>
               <div class="cart">
@@ -231,49 +231,9 @@
 
           <li class="">
             <div class="grid_3 product">
-              <img class="sale" src="<%= asset_path("sale.png")%>" alt="Sale"/>
+              <img class="sale" src="<%= asset_path('sale.png')%>" alt="Sale"/>
               <div class="prev">
-                <a href="/product_page.html"><img src="<%= asset_path("product_6.png")%>" alt="" title="" /></a>
-              </div><!-- .prev -->
-              <h3 class="title">Febreze Air Effects New Zealand Springs</h3>
-              <div class="cart">
-                <div class="price">
-                <div class="vert">
-                  <div class="price_new">$550.00</div>
-                  <div class="price_old">$725.00</div>
-                </div>
-                </div>
-                <a href="#" class="obn"></a>
-                <a href="#" class="like"></a>
-                <a href="#" class="bay"></a>
-              </div><!-- .cart -->
-            </div><!-- .grid_3 -->
-          </li>
-
-          <li class="">
-            <div class="grid_3 product">
-              <div class="prev">
-                <a href="/product_page.html"><img src="<%= asset_path("product_7.png")%>" alt="" title="" /></a>
-              </div><!-- .prev -->
-              <h3 class="title">Febreze Air Effects New Zealand Springs</h3>
-              <div class="cart">
-                <div class="price">
-                <div class="vert">
-                  <div class="price_new">$550.00</div>
-                </div>
-                </div>
-                <a href="#" class="obn"></a>
-                <a href="#" class="like"></a>
-                <a href="#" class="bay"></a>
-              </div><!-- .cart -->
-            </div><!-- .grid_3 -->
-          </li>
-
-          <li class="">
-            <div class="grid_3 product">
-              <img class="sale" src="<%= asset_path("sale.png")%>" alt="Sale"/>
-              <div class="prev">
-                <a href="/product_page.html"><img src="<%= asset_path("produkt_slid1.png")%>" alt="" title="" /></a>
+                <a href="/product_page.html"><img src="<%= asset_path('product_6.png')%>" alt="" title="" /></a>
               </div><!-- .prev -->
               <h3 class="title">Febreze Air Effects New Zealand Springs</h3>
               <div class="cart">
@@ -293,7 +253,47 @@
           <li class="">
             <div class="grid_3 product">
               <div class="prev">
-                <a href="/product_page.html"><img src="<%= asset_path("product_9.png")%>" alt="" title="" /></a>
+                <a href="/product_page.html"><img src="<%= asset_path('product_7.png')%>" alt="" title="" /></a>
+              </div><!-- .prev -->
+              <h3 class="title">Febreze Air Effects New Zealand Springs</h3>
+              <div class="cart">
+                <div class="price">
+                <div class="vert">
+                  <div class="price_new">$550.00</div>
+                </div>
+                </div>
+                <a href="#" class="obn"></a>
+                <a href="#" class="like"></a>
+                <a href="#" class="bay"></a>
+              </div><!-- .cart -->
+            </div><!-- .grid_3 -->
+          </li>
+
+          <li class="">
+            <div class="grid_3 product">
+              <img class="sale" src="<%= asset_path('sale.png')%>" alt="Sale"/>
+              <div class="prev">
+                <a href="/product_page.html"><img src="<%= asset_path('produkt_slid1.png')%>" alt="" title="" /></a>
+              </div><!-- .prev -->
+              <h3 class="title">Febreze Air Effects New Zealand Springs</h3>
+              <div class="cart">
+                <div class="price">
+                <div class="vert">
+                  <div class="price_new">$550.00</div>
+                  <div class="price_old">$725.00</div>
+                </div>
+                </div>
+                <a href="#" class="obn"></a>
+                <a href="#" class="like"></a>
+                <a href="#" class="bay"></a>
+              </div><!-- .cart -->
+            </div><!-- .grid_3 -->
+          </li>
+
+          <li class="">
+            <div class="grid_3 product">
+              <div class="prev">
+                <a href="/product_page.html"><img src="<%= asset_path('product_9.png')%>" alt="" title="" /></a>
               </div><!-- .prev -->
               <h3 class="title">Febreze Air Effects New Zealand Springs</h3>
               <div class="cart">
