add devise mail

--- a/app/assets/stylesheets/css/style.css
+++ b/app/assets/stylesheets/css/style.css
@@ -4708,3 +4708,14 @@ list-style: none;
 *+html .primary ul ul.sub li a:hover{
     background: #f5f7f9;
 }
+  form.registed input[type="password"] 
+ {
+  width: 255px;
+   margin: 5px 0 13px 0; } 
+input[type="email"], input[type="password"]
+ { 
+ height: 33px;
+  padding: 0 10px; 
+border: 1px solid #ccc; 
+border-radius: 2px; 
+} 
