--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,7 @@
   </head>
 
   <body>
+ <%= render 'layouts/messages' %>  
 <%= render partial: 'layouts/header'%>
     <%= yield %>
   <%= render partial: 'layouts/footer'%>
