--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -4,7 +4,7 @@
        <div id="content">
        	<div class="col-md-12">
     <div class="grid_6">
-<%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }, html: { class: "registed"}) do |f| %>
+<%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post , class: "registed"}) do |f| %>
         <h2>Forgot your password?</h2>
         <div class="email">
           <strong>Email Adress:</strong><sup class="surely">*</sup><br/>
