--- a/app/views/layouts/_messages.html.erb
+++ b/app/views/layouts/_messages.html.erb
@@ -1,10 +1,8 @@
 <% flash.each do |key, value| %>
-  <div class="alert alert-<%= key %>">
-    <a href="#" data-dismiss="alert" class="close">×</a>
-    <ul>
-      <li>
-        <%= value %>
-      </li>
-    </ul>
+<div class="message">
+   <div class="alert-message <%= key %> fade in">
+    <a class="close" href="#">&times</a>
+    <center><strong><%= value %></strong></center>
   </div>
+</div>
 <% end %>
