--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,4 +1,3 @@
-  <link rel="shortcut icon" href="favicon.ico">
   <div class="container_12">
     <div id="top">
       <div class="grid_3 ">
@@ -19,15 +18,15 @@
 
     <header id="branding">
       <div class="grid_3">
-        <hgroup>
-          <h1 id="site_logo" ><a href="/" title=""><img src="<%= asset_path('logo.png')%>" alt="Online Store Theme Logo"/></a></h1>
-          <h2 id="site_description">Online Store Theme</h2>
+        <hgroup><center>
+          <h1 id="site_logo" ><a href="/" title=""><img src="<%= asset_path('download.png')%>" alt="Online Store Logo" height="80" width="80"/></a></h1>
+          <h2 id="site_description"><b>Online Store </b></h2></center>
         </hgroup>
       </div><!-- .grid_3 -->
 
       <div class="grid_3">
         <form class="search">
-          <input type="text" name="search" class="entry_form" value="" placeholder="Search entire store here..."/>
+          <input type="text" name="search" class="entry_form" value="" placeholder="Search Products, Brands and more..."/>
 	</form>
       </div><!-- .grid_3 -->
 
@@ -90,11 +89,11 @@
         <nav class="primary">
           <a class="menu-select" href="#">Catalog</a>
           <ul>
-            <li class="curent"><a href="/">Home</a></li>
-            <li><a href="/catalog_grid.html">Solids</a></li>
-            <li><a href="/catalog_grid.html">Liquids</a></li>
+            <li class=""><a href="/">Women</a></li>
+            <li><a href="/catalog_grid.html">Men</a></li>
+            <li><a href="/catalog_grid.html">Baby & kids</a></li>
             <li class="parent">
-              <a href="#">Spray</a>
+              <a href="#">Home & Furniture</a>
               <ul class="sub">
                 <li><a href="/catalog_grid.html">For home</a></li>
                 <li><a href="/catalog_grid.html">For Garden</a></li>
@@ -102,10 +101,10 @@
                 <li><a href="/catalog_grid.html">Other spray</a></li>
               </ul>
             </li>
-            <li><a href="/catalog_grid.html">Electric</a></li>
-            <li><a href="/catalog_grid.html">For cars</a></li>
+            <li><a href="/catalog_grid.html">Electronics</a></li>
+            <li><a href="/catalog_grid.html">Sports & Books</a></li>
             <li class="parent">
-              <a href="#">All pages</a>
+              <a href="#">Kitchen Related Products</a>
               <ul class="sub">
                 <li><a href="/">Home</a></li>
                 <li><a href="/text_page.html">Typography and basic styles</a></li>
