--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -90,106 +90,30 @@
         <ul id="list_product" class="list_product">
           <li class="">
             <div class="grid_3 product">
+              <% @products.each do |p|%>
+
+              
+
               <img class="sale" src="<%= asset_path('sale.png')%>" alt="Sale"/>
               <div class="prev">
-                <a href="/product_page.html"><img src="<%= asset_path('product_1.png')%>" alt="" title="" /></a>
+                <a href="#"><%= image_tag p.image.try(:url).to_s %></a>
+                <!-- <a href="/product_page.html"><img src="<%#= asset_path('product_1.png')%>" alt="" title="" /></a> -->
               </div><!-- .prev -->
               <h3 class="title">Febreze Air Effects New Zealand Springs</h3>
               <div class="cart">
                 <div class="price">
                 <div class="vert">
-                  <div class="price_new">$550.00</div>
-                  <div class="price_old">$725.00</div>
+                  <div class="price_new"><%= p.price%></div>
+                  <div class="price_old"><%= p.full_price%></div>
                 </div>
                 </div>
                 <a href="#" class="obn"></a>
                 <a href="#" class="like"></a>
                 <a href="#" class="bay"></a>
               </div><!-- .cart -->
+              <%end%>
             </div><!-- .grid_3 -->
           </li>
-
-          <li class="">
-            <div class="grid_3 product">
-              <img class="sale" src="<%= asset_path('sale.png')%>" alt="Sale"/>
-              <div class="prev">
-                <a href="/product_page.html"><img src="<%= asset_path('product_2.png')%>" alt="" title="" /></a>
-              </div><!-- .prev -->
-              <h3 class="title">Febreze Air Effects New Zealand Springs</h3>
-              <div class="cart">
-                <div class="price">
-                <div class="vert">
-                  <div class="price_new">$550.00</div>
-                  <div class="price_old">$725.00</div>
-                </div>
-                </div>
-                <a href="#" class="obn"></a>
-                <a href="#" class="like"></a>
-                <a href="#" class="bay"></a>
-              </div><!-- .cart -->
-            </div><!-- .grid_3 -->
-          </li>
-
-          <li class="">
-            <div class="grid_3 product">
-              <div class="prev">
-                <a href="/product_page.html"><img src="<%= asset_path('product_3.png')%>" alt="" title="" /></a>
-              </div><!-- .prev -->
-              <h3 class="title">Febreze Air Effects New Zealand Springs</h3>
-              <div class="cart">
-                <div class="price">
-                <div class="vert">
-                  <div class="price_new">$550.00</div>
-                </div>
-                </div>
-                <a href="#" class="obn"></a>
-                <a href="#" class="like"></a>
-                <a href="#" class="bay"></a>
-              </div><!-- .cart -->
-            </div><!-- .grid_3 -->
-          </li>
-
-          <li class="">
-            <div class="grid_3 product">
-              <img class="sale" src="<%= asset_path('sale.png')%>" alt="Sale"/>
-              <div class="prev">
-                <a href="/product_page.html"><img src="<%= asset_path('product_4.png')%>" alt="" title="" /></a>
-              </div><!-- .prev -->
-              <h3 class="title">Febreze Air Effects New Zealand Springs</h3>
-              <div class="cart">
-                <div class="price">
-                <div class="vert">
-                  <div class="price_new">$550.00</div>
-                  <div class="price_old">$725.00</div>
-                </div>
-                </div>
-                <a href="#" class="obn"></a>
-                <a href="#" class="like"></a>
-                <a href="#" class="bay"></a>
-              </div><!-- .cart -->
-            </div><!-- .grid_3 -->
-          </li>
-
-          <li class="">
-            <div class="grid_3 product">
-              <div class="prev">
-                <a href="/product_page.html"><img src="<%= asset_path('product_8.png')%>" alt="" title="" /></a>
-              </div><!-- .prev -->
-              <h3 class="title">Febreze Air Effects New Zealand Springs</h3>
-              <div class="cart">
-                <div class="price">
-                <div class="vert">
-                  <div class="price_new">$550.00</div>
-                  <div class="price_old">$725.00</div>
-                </div>
-                </div>
-                <a href="#" class="obn"></a>
-                <a href="#" class="like"></a>
-                <a href="#" class="bay"></a>
-              </div><!-- .cart -->
-            </div><!-- .grid_3 -->
-          </li>
-
         </ul><!-- #list_product -->
         </div><!-- .list_carousel -->
       </div><!-- .carousel -->
