--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,4 +1,5 @@
 <p id="notice"><%= notice %></p>
+<%= link_to 'Products Variants', product_product_variants_path(@product) %><p>
 
 <p>
   <strong>Sub category:</strong>
