--- a/app/views/product_variants/_form.html.erb
+++ b/app/views/product_variants/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for :product_variant, :url => product_product_variants_path do |form| %>
+<%= form_for @product_variant, url: @product_variant.new_record? ? product_product_variants_path : product_product_variant_path do |form| %>
   <% if product_variant.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(product_variant.errors.count, "error") %> prohibited this product_variant from being saved:</h2>
