--- a/app/views/product_variants/edit.html.erb
+++ b/app/views/product_variants/edit.html.erb
@@ -2,5 +2,5 @@
 
 <%= render 'form', product_variant: @product_variant %>
 
-<%= link_to 'Show', @product_variant %> |
-<%= link_to 'Back', product_variants_path %>
+<%#= link_to 'Show', @product_variant %> |
+<%#= link_to 'Back', product_variants_path %>
