--- a/app/views/product_variants/index.html.erb
+++ b/app/views/product_variants/index.html.erb
@@ -18,10 +18,9 @@
         <td><%= product_variant.name %></td>
         <td><%= product_variant.product_id %></td>
         <td><%= image_tag product_variant.image.try(:url).to_s , width: 100, height: 100  %></td>
-        <%#byebug%>
-        <td><%#= link_to 'Show', product_product_variant_path(@product) %></td>
-        <td><%#= link_to 'Edit', edit_product_product_variant_path(product_variant.product_id) %></td>
-        <td><%#= link_to 'Destroy', product_product_variant, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><a href="/products/<%= product_variant.product_id%>/product_variants/<%= product_variant.id%>">Show</a>
+        <td><a href="/products/<%= product_variant.product_id%>/product_variants/<%= product_variant.id%>/edit">Edit</a><%#= link_to 'Edit', edit_product_product_variant_path(product_variant) %></td>
+        <td><a href="/products/<%= product_variant.product_id%>/product_variants/<%= product_variant.id%>" data-method="delete">Destroy</a><%#= link_to 'Destroy', product_product_variant, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
