--- a/app/views/product_variants/show.html.erb
+++ b/app/views/product_variants/show.html.erb
@@ -15,5 +15,5 @@
   <%= @product_variant.image %>
 </p>
 
-<%= link_to 'Edit', edit_product_variant_path(@product_variant) %> |
-<%= link_to 'Back', product_variants_path %>
+<%#= link_to 'Edit', edit_product_variant_path(@product_variant) %> |
+<%#= link_to 'Back', product_variants_path %>
