--- a/app/views/products/product_page.html.erb
+++ b/app/views/products/product_page.html.erb
@@ -77,9 +77,7 @@
 						</div>
 
 						<div class="cart">
-							<a href="#" class="bay">Add to Cart</a>
-							<input type="text" name="" class="number" value="1" />
-							<span>Quantity:</span>
+							<%= render 'cart', product: @product%>
 						</div>
 						<div class="clear"></div>
 					</div><!-- .block_cart -->
