--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -281,10 +281,7 @@
         <div class="bottom_block newsletter">
           <h3>Newsletter</h3>
           <p>Cursus in dapibus ultrices velit fusce. Felis lacus erat. Fermentum parturient lacus tristique habitant nullam morbi et odio nibh mus dictum tellus erat.</p>
-          <form class="letter_form">
-            <input type="email" name="newsletter" class="l_form" value="" placeholder="Enter your email address..."/>
-            <input type="submit" id="submit" value="" />
-          </form>
+         <%= render 'subscribe'%>
           <div class="lettel_description">
             Vel lobortis gravida. Cursus in dapibus ultrices velit fusce. Felis lacus erat.
           </div>
