--- a/app/views/products/_cart.html.erb
+++ b/app/views/products/_cart.html.erb
@@ -1,9 +1,14 @@
 <%= form_for :cart, url: carts_path  do |form| %>
-	<%= form.text_field :quantity , :value=>"1" %>
-	<span>Quantity</span>
 	<%= form.hidden_field :product_id, :value=> @product.id %>
-	<%= form.submit 'Add to Cart', :class => "bay" %>
-	<!-- <a href="#" class="bay">Add to Cart</a>
+	Quantity:
+	<div class="row">
+	<div class="col-md-6">
+	<%= form.text_field :quantity , :value=>"1", style: "height:35px" %>
+	</div>
+	<div class="col-md-2">
+	<%= form.submit 'Add to Cart', :class => "bay"%>
+	</div></div>
+<% end%>
+<!-- <a href="#" class="bay">Add to Cart</a>
 	<input type="text" name="" class="number" value="1" />
 	<span>Quantity:</span> -->
-<% end%>
