--- a/app/views/products/product_page.html.erb
+++ b/app/views/products/product_page.html.erb
@@ -140,105 +140,9 @@
 					<div class="clear"></div>
 					</div><!-- .tab1 .tab_body -->
 
-					<div class="tab2 tab_body">
-						<h4>Customer reviews</h4>
-						<ul class="comments">
-							<li>
-								<div class="autor">Mike Example</div>, <time datetime="2012-11-03">03.11.2012</time>
+					
 
-								<div class="evaluation">
-									<div class="quality">
-										<strong>Quality</strong>
-										<a class="plus" href="#"></a>
-										<a class="plus" href="#"></a>
-										<a class="plus" href="#"></a>
-										<a href="#"></a>
-										<a href="#"></a>
-									</div>
-									<div class="price">
-										<strong>Price</strong>
-										<a class="plus" href="#"></a>
-										<a class="plus" href="#"></a>
-										<a class="plus" href="#"></a>
-										<a class="plus_minus" href="#"></a>
-										<a href="#"></a>
-									</div>
-									<div class="clear"></div>
-								</div><!-- .evaluation -->
-
-								<p>Suspendisse at placerat turpis. Duis luctus erat vel magna pharetra aliquet. Maecenas tincidunt feugiat ultricies. Phasellus et dui risus. Vestibulum adipiscing, eros quis lobortis dictum.</p>
-							</li>
-
-							<li>
-								<div class="autor">Mike Example</div>, <time datetime="2012-11-03">03.11.2012</time>
-
-								<div class="evaluation">
-									<div class="quality">
-										<strong>Quality</strong>
-										<a class="plus" href="#"></a>
-										<a class="plus" href="#"></a>
-										<a class="plus" href="#"></a>
-										<a class="plus" href="#"></a>
-										<a class="plus_minus" href="#"></a>
-									</div>
-									<div class="price">
-										<strong>Price</strong>
-										<a class="plus" href="#"></a>
-										<a class="plus" href="#"></a>
-										<a class="plus" href="#"></a>
-										<a class="plus" href="#"></a>
-										<a href="#"></a>
-									</div>
-									<div class="clear"></div>
-								</div><!-- .evaluation -->
-
-								<p>Etiam mollis volutpat odio, id euismod justo gravida a. Aliquam erat volutpat. Phasellus faucibus venenatis lorem, vitae commodo elit pretium et. Duis rhoncus lobortis congue. Vestibulum et purus dui, vel porta lectus. Sed vulputate pulvinar adipiscing.</p>
-							</li>
-						</ul><!-- .comments -->
-
-						<form class="add_comments">
-							<h4>Write Your Own Review</h4>
-
-							<div class="evaluation">
-								<div class="quality">
-									<strong>Quality</strong><sup class="surely">*</sup>
-									<input class="niceRadio" type="radio" name="quality" value="1" /><span class="eva_num">1</span>
-									<input class="niceRadio" type="radio" name="quality" value="2" /><span class="eva_num">2</span>
-									<input class="niceRadio" type="radio" name="quality" value="3" /><span class="eva_num">3</span>
-									<input class="niceRadio" type="radio" name="quality" value="4" /><span class="eva_num">4</span>
-									<input class="niceRadio" type="radio" name="quality" value="5" /><span class="eva_num">5</span>
-								</div>
-								<div class="price">
-									<strong>Price</strong><sup class="surely">*</sup>
-									<input class="niceRadio" type="radio" name="price" value="1" /><span class="eva_num">1</span>
-									<input class="niceRadio" type="radio" name="price" value="2" /><span class="eva_num">2</span>
-									<input class="niceRadio" type="radio" name="price" value="3" /><span class="eva_num">3</span>
-									<input class="niceRadio" type="radio" name="price" value="4" /><span class="eva_num">4</span>
-									<input class="niceRadio" type="radio" name="price" value="5" /><span class="eva_num">5</span>
-								</div>
-								<div class="clear"></div>
-							</div><!-- .evaluation -->
-
-							<div class="nickname">
-								<strong>Nickname</strong><sup class="surely">*</sup><br/>
-								<input type="text" name="" class="" value="" />
-							</div><!-- .nickname -->
-
-							<div class="your_review">
-								<strong>Summary of Your Review</strong><sup class="surely">*</sup><br/>
-								<input type="text" name="" class="" value="" />
-							</div><!-- .your_review -->
-
-							<div class="clear"></div>
-
-							<div class="text_review">
-								<strong>Review</strong><sup class="surely">*</sup><br/>
-								<textarea name="text"></textarea>
-								<i>Note: HTML is not translated!</i>
-							</div><!-- .text_review -->
-
-							<input type="submit" value="Submit Review" />
-						</form><!-- .add_comments -->
+					<%= render 'rating' ,product: @product%>
 					<div class="clear"></div>
 					</div><!-- .tab2 .tab_body -->
 
@@ -405,11 +309,11 @@
 		     <h3>Newsletter Signup</h3>
 		     <p>Phasellus vel ultricies felis. Duis
 		     rhoncus risus eu urna pretium.</p>
-
-		     <form class="newsletter">
+		     <%= render 'welcome/subscribe'%>
+		   <!--   <form class="newsletter">
 			    <input type="email" name="newsletter" class="your_email" value="" placeholder="Enter your email address..."/>
 			    <input type="submit" id="submit" value="Subscribe" />
-		     </form>
+		     </form> -->
 	      </aside><!-- #newsletter_signup -->
 
 	      <aside id="banners">
