--- a/app/views/products/_rating.html.erb
+++ b/app/views/products/_rating.html.erb
@@ -33,10 +33,12 @@
         </div>
         <div class="review-block-description"><%= rating.review%></div>
         <%#byebug%>
+        <%if current_user.present?%>
         <div id="rate_<%= rating.id %>_likes">
           <%= render "likes/likes", likeable: rating %>
         </div>
       </div>
+      <%end%>
     </div>
     <hr/>
   </div>
