--- a/app/views/likes/create.js.erb
+++ b/app/views/likes/create.js.erb
@@ -1,5 +1,8 @@
- <% if @like.likeable.class.name == "Rating" %>
+<% if @like.likeable.class.name == "Rating" %>
  // $("#rating_likes").html("<%= escape_javascript render 'likes/likes', likeable: @like.likeable %>");
  <%# elsif @like.likeable.class.name == "Comment" %>
 $("#rate_<%= @like.likeable.id %>_likes").html("<%= escape_javascript render 'likes/likes', likeable: @like.likeable %>");
+<%elsif @like.likeable.class.name == "Product" %>
+$("#product_<%= @like.likeable.id %>_likes").html("<%= escape_javascript render 'likes/likes', likeable: @like.likeable %>");
+<% else %>
  <% end %>
