--- a/app/views/likes/destroy.js.erb
+++ b/app/views/likes/destroy.js.erb
@@ -2,4 +2,7 @@
 // $("#rating_likes").html("<%= escape_javascript render 'likes/likes', likeable: @like.likeable %>");
 <%# elsif @like.likeable.class.name == "Comment" %>
 $("#rate_<%= @like.likeable.id %>_likes").html("<%= escape_javascript render 'likes/likes', likeable: @like.likeable %>");
+<%elsif @like.likeable.class.name == "Product" %>
+$("#product_<%= @like.likeable.id %>_likes").html("<%= escape_javascript render 'likes/likes', likeable: @like.likeable %>");
+<% else %>
 <% end %>
