--- a/app/views/products/product_page.html.erb
+++ b/app/views/products/product_page.html.erb
@@ -75,11 +75,17 @@
 							<div class="obn"><a href="#" class="obn">Add to Compare</a></div>
 							<div class="like"><a href="#" class="like">Add to Wishlist</a></div>
 						</div>
-
+						
 						<div class="cart">
 							<%= render 'cart', product: @product%>
-						</div>
+						<%if current_user.present?%>
+			       <div id="product_<%= @product %>_likes">
+			          <%= render "likes/likes", likeable: @product %>
+			        </div>
+			      </div>
+			      <%end%>
 						<div class="clear"></div>
+						</div>
 					</div><!-- .block_cart -->
 					<div class="soc">
 						<img src="images/soc.png" alt="Soc"/>
@@ -91,65 +97,16 @@
 			<div class="clear"></div>
 
 			<div class="grid_9" >
-				<div id="wrapper_tab" class="tab1">
-					<a href="#" class="tab1 tab_link">Description</a>
-					<a href="#" class="tab2 tab_link">Reviews</a>
-					<a href="#" class="tab3 tab_link">Custom Tab</a>
-
-					<div class="clear"></div>
-
-					<div class="tab1 tab_body">
-						<h4>Tables Style</h4>
-						<p>Suspendisse at placerat turpis. Duis luctus erat vel magna pharetra aliquet. Maecenas tincidunt feugiat ultricies. Phasellus et dui risus. Vestibulum adipiscing, eros quis lobortis dictum. Etiam mollis volutpat odio, id euismod justo gravida a. Aliquam erat volutpat. Phasellus faucibus venenatis lorem, vitae commodo elit pretium et. Duis rhoncus lobortis congue. Vestibulum et purus dui, vel porta lectus. Sed vulputate pulvinar adipiscing.</p>
-						<ul>
-							<li>She was walking to the mall.</li>
-							<li>Ted might eat the cake.</li>
-							<li>You must go right now.</li>
-							<li>Words were spoken.</li>
-							<li>The teacher is writing a report.</li>
-						</ul>
-
-						<p>Here are some verb phrase examples where the verb phrase is the predicate of a sentence. In this case, the verb phrase consists of the main verb plus any auxiliary, or helping, verbs. Nulla nec velit. Mauris pulvinar erat non massa. Suspendisse tortor turpis, porta nec, tempus vitae, iaculis semper, pede.</p>
-						<ol>
-							<li>Shipping & Delivery.</li>
-							<li>Privacy & Security.</li>
-							<li>Returns & Replacements.</li>
-							<li>Payment, Pricing & Promotions.</li>
-							<li>Viewing Orders.</li>
-						</ol>
-
-						<p>Next are some verb phrase examples of verb phrases where the phrase has a single function which means it can act like an adverb or an adjective. The phrase would include the verb and any modifiers, complements, or objects. Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Morbi luctus. Duis lobortis.  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur nec posuere odio. Proin vel ultrices erat. </p>
-
-						<table>
-							<tr>
-								<th class="bg">First Column</th><th>Second Column</th><th class="bg">Third Column</th><th>Fourth Column</th>
-							</tr>
-							<tr>
-								<td class="bg">One</td><td>no</td><td class="bg">yes</td><td>yes, all</td>
-							</tr>
-							<tr>
-								<td class="bg">Two</td><td>0</td><td class="bg">1</td><td>all</td>
-							</tr>
-							<tr>
-								<td class="bg">Three</td><td>$399</td><td class="bg">$599</td><td>$799</td>
-							</tr>
-							<tr>
-								<td class="bg">Four</td><td><a href="#">Call action</a></td><td class="bg"><a href="#">Call action</a></td><td><a href="#">Call action</a></td>
-							</tr>
-						</table>
-					<div class="clear"></div>
-					</div><!-- .tab1 .tab_body -->
-
+				<!-- <div id="wrapper_tab" class=""> -->
 					
+					Reviews
+
+					<div class="clear"></div>
 
 					<%= render 'rating' ,product: @product%>
 					<div class="clear"></div>
-					</div><!-- .tab2 .tab_body -->
-
-					<div class="tab3 tab_body">
-						<h4>Custom Tab</h4>
-					<div class="clear"></div>
-					</div><!-- .tab3 .tab_body -->
+					<!-- </div> -->
+					
 					<div class="clear"></div>
 				</div>​<!-- #wrapper_tab -->
 				<div class="clear"></div>
