--- a/app/views/likes/create.js.erb
+++ b/app/views/likes/create.js.erb
@@ -1,8 +1,16 @@
-<% if @like.likeable.class.name == "Rating" %>
+<%# if @like.likeable.class.name == "Rating" %>
  // $("#rating_likes").html("<%= escape_javascript render 'likes/likes', likeable: @like.likeable %>");
  <%# elsif @like.likeable.class.name == "Comment" %>
-$("#rate_<%= @like.likeable.id %>_likes").html("<%= escape_javascript render 'likes/likes', likeable: @like.likeable %>");
-<%elsif @like.likeable.class.name == "Product" %>
+// $("#rate_<%= @like.likeable.id %>_likes").html("<%= escape_javascript render 'likes/likes', likeable: @like.likeable %>");
+<%#elsif @like.likeable.class.name == "Product" %>
+// $("#product_<%= @like.likeable.id %>_likes").html("<%= escape_javascript render 'likes/likes', likeable: @like.likeable %>");
+<%# else %>
+ <%# end %>
+
+
+ <% if @like.likeable.class.name == "Product" %>
+ <%#byebug%>
 $("#product_<%= @like.likeable.id %>_likes").html("<%= escape_javascript render 'likes/likes', likeable: @like.likeable %>");
-<% else %>
+<%else @like.likeable.class.name == "Rating" %>
+$("#rate_<%= @like.likeable.id %>_likes").html("<%= escape_javascript render 'likes/likes', likeable: @like.likeable %>");
  <% end %>
