--- a/app/views/products/_rating.html.erb
+++ b/app/views/products/_rating.html.erb
@@ -13,37 +13,9 @@
     %>
 <div class="tab_body">
 <h4>Customer reviews</h4>
-<ul class="comments">
-  <% @product.ratings.order("ratings.created_at DESC").each do |rating|%>
-  <div class="review-block">
-    <div class="row">
-      <div class="col-sm-3">
-        <img src="http://dummyimage.com/60x60/666/ffffff&text=No+Image" class="img-rounded">
-        <div class="review-block-name"><a href="#"><%#= rating.user.email %></a></div>
-        <div class="review-block-date"><%= rating.created_at.strftime('%d %b %Y')%><br/><%= time_ago_in_words(rating.created_at, include_seconds: true) %> Ago</div>
-      </div>
-      <div class="col-sm-9">
-        <div class="review-block-rate">
-          <% (1 .. (rating.rating/2)).each do |rr|%>
-          <span class="glyphicon glyphicon-star"></span>
-          <% end %>
-          <% if rating.half_star? %>
-          <span class="glyphicon glyphicon-star half"></span>
-          <% end %>
-        </div>
-        <div class="review-block-description"><%= rating.review%></div>
-        <%#byebug%>
-        <%if current_user.present?%>
-       <div id="rate_<%= rating.id %>_likes">
-          <%= render "likes/likes", likeable: rating %>
-        </div>
-      </div>
-      <%end%>
-    </div>
-    <hr/>
-  </div>
-  <% end %>
-</ul>
+<div id="show_rating">
+<%= render partial: 'show_rating', locals: {product: @product}%>
+</div>
 <div id="review-rating">
   <%= form_for :rating, url: ratings_path ,html: {class: "add_comments"} do |f| %>
   <h4>Write Your Own Review</h4>
@@ -77,7 +49,7 @@
   <%end %>
 </div>
 <div id="review-rating">
-  <%= form_for :rating, url: ratings_path ,html: {class: "add_comments"} do |f| %>
+  <%= form_for :rating, url: ratings_path ,html: {class: "add_comments"}, remote: true do |f| %>
   <h4>Write Your Own Review</h4>
   <div class="evaluation">
     <div class="quality">
