--- a/app/views/products/_show_rating.html.erb
+++ b/app/views/products/_show_rating.html.erb
@@ -1,10 +1,11 @@
+<%@product= Product.where(id: product).first%>
 <ul class="comments">
-  <% product.ratings.order("ratings.created_at DESC").each do |rating|%>
+  <% @product.ratings.order("ratings.created_at DESC").each do |rating|%>
   <div class="review-block">
     <div class="row">
       <div class="col-sm-3">
         <img src="http://dummyimage.com/60x60/666/ffffff&text=No+Image" class="img-rounded">
-        <div class="review-block-name"><a href="#"><%#= rating.user.email %></a></div>
+        <div class="review-block-name"><a href="#"><%= rating.user.email %></a></div>
         <div class="review-block-date"><%= rating.created_at.strftime('%d %b %Y')%><br/><%= time_ago_in_words(rating.created_at, include_seconds: true) %> Ago</div>
       </div>
       <div class="col-sm-9">
@@ -17,7 +18,6 @@
           <% end %>
         </div>
         <div class="review-block-description"><%= rating.review%></div>
-        <%#byebug%>
         <%if current_user.present?%>
        <div id="rate_<%= rating.id %>_likes">
           <%= render "likes/likes", likeable: rating %>
